Version 2.2.5

 User-visible changes:
  * Fix: dailymotion ID parsing
  * Fix: --hosts: dailymotion: spak-mini -> spark-mini

 Developer-visible changes:
  * tlinks/youtube-utf8.url: fix dead link


Version 2.2.4
(August 2, 2009)

 User-visible changes:
  * Add:
    # --stream-pass option (port from cclive)
    # funnyhub support
      * Port from cclive
    # myubo support
      * Port from cclive
    # clipfish support
      * Thanks to Patrick Hoffmann <patrick@sobran.de> for data mining
  * Fix:
    # Misc. typos in manual
    # Redtube support (videoid/title parsing issues)
    # Dailymotion: spak-mini -> spark-mini
  * Change:
    # replace dashes ("-") with underscores ("_") in video ids

 Developer-visible changes:
  * Add:
    # Host/Clipfish.pm
    # Host/Funnyhub.pm
    # Host/Myubo.pm
    # t/16clipfish.t
    # t/17funnyhub.t
    # t/18funnyhub.t
    # tlinks/clipfish.url
    # tlinks/funnyhub.url
    # tlinks/myubo.url
  * Change:
    # t/02youtube.t: test link (dead link)
    # tlinks/ytube.url: ditto
    # tlinks/multi.url: youtube: ditto
  * Remove:
    # tlinks/multi.lst


Version 2.2.3
(July 25, 2009)

 User-visible changes:
  * Add:
    1. Support spiegel.de (closes issue #32) [thanks to anon for data]
    2. Support golem.de (closes issue #33) [thanks to anon for data]
    3. ~/.clive/config path support
    4. --cookie-jar option
    5. Support for ehrensenf.de (closes issue #34) [thanks to bjoern for data]
  * Improve: unicode support (related to issue #29)
    1. cctv: no longer requires -C and -R options (obsoletes -R)
    2. --cclass: now works as expected with unicode as well
  * Improve: backwards compatibility with clive 2.0, 2.1
    1. Allow --format=(mp4|hd|hq|3gp) (closes Debian bug #535957)
    2. Restore ~/.config/clive/config path support (closes Debian bug #535483)
    3. Add --upgrade-config (2.0/2.1 config to 2.2+ format)
  * Change:
    1.  --hosts prints now supported formats